--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
         <th>ID</th>
         <th>Title</th>
         <th>Text</th>
+        <th colspan="2" ></th>
         <!-- <th>Created date</th> -->
     </tr>
 
@@ -23,7 +24,10 @@
                 <%= article.created_at %>
             </td> -->
             <td>
-                <%= link_to 'Show', article_path(article.id) %>
+                <%= link_to 'Show', article_path(article) %>
+            </td>
+            <td>
+                <%= link_to 'Edit', edit_article_path(article) %>
             </td>
         </tr>
         <% end %>
